# cli-sandbox-guard

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  policy.example.toml  sandbox-guard-requirements.md
.github/workflows/: ci.yml  release.yml
crates/sandbox-guard-cli/: Cargo.toml
crates/sandbox-guard-cli/src/: grok.rs  main.rs  profile.rs  setup.rs  uninstall.rs
crates/sandbox-guard-cli/tests/: audit_cli.rs  events_cli.rs  workflow_policy.rs
crates/sandbox-guard-core/: Cargo.toml
crates/sandbox-guard-core/src/: audit.rs  audit_reader.rs  change_apply.rs  events.rs  export.rs  gc.rs  git.rs  lib.rs  policy.rs  profile.rs  profile_store.rs  signed_profile.rs  staging.rs  tool_store.rs
crates/sandbox-guard-core/tests/: audit_reader.rs  audit_safety.rs  change_export.rs  garbage_collection.rs  profile_store.rs  staging_security.rs  tool_store.rs
crates/sandbox-guard-helper/: Cargo.toml
crates/sandbox-guard-helper/src/: lib.rs  main.rs  proxy.rs  seccomp.rs  supervisor.rs
crates/sandbox-guard-runner/: Cargo.toml
crates/sandbox-guard-runner/src/: approval.rs  clipboard.rs  lib.rs  linux.rs  macos.rs  terminal.rs
docs/: INSTALL.md  LIVE_SANDBOX_PROBE_2026-07-16.md  MACOS_NATIVE_EVALUATION.md  RELEASE.md  SECURITY_MODEL.md
docs/release-validation/: ALPHA3_KNOWN_ISSUE_ENV_LEAK.md  v0.3.0-alpha.2.md  v0.3.0-alpha.3.md  v0.3.0-alpha.4.md
scripts/: package-release.sh  test-release-scripts.sh  verify-release-artifacts.sh
