[workspace]
resolver = "3"
members = [
    "crates/sandbox-guard-core",
    "crates/sandbox-guard-runner",
    "crates/sandbox-guard-helper",
    "crates/sandbox-guard-cli",
]

[workspace.package]
version = "0.3.0-alpha.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/xbtoshi/cli-sandbox-guard"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
directories = "6.0"
ed25519-dalek = "2.2"
globset = "0.4"
hex = "0.4"
ignore = "0.4"
image = { version = "=0.25.9", default-features = false, features = ["png"] }
libc = "0.2"
rustix = { version = "1.0", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.20"
thiserror = "2.0"
toml = "0.8"
uuid = { version = "1.17", features = ["v4", "serde"] }
which = "8.0"
