[package]
name = "sandbox-guard"
description = "Run AI coding CLIs against a sanitized, isolated workspace"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "guard"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
directories.workspace = true
sandbox-guard-core = { path = "../sandbox-guard-core" }
sandbox-guard-helper = { path = "../sandbox-guard-helper" }
sandbox-guard-runner = { path = "../sandbox-guard-runner" }
serde_json.workspace = true
tempfile.workspace = true
which.workspace = true
