[package]
name = "sandbox-guard"
description = "Run AI coding CLIs against a sanitized, isolated workspace"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "guard"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
directories.workspace = true
hex.workspace = true
libc.workspace = true
sandbox-guard-core = { path = "../sandbox-guard-core" }
sandbox-guard-helper = { path = "../sandbox-guard-helper" }
sandbox-guard-runner = { path = "../sandbox-guard-runner" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
toml.workspace = true
uuid.workspace = true
which.workspace = true

[dev-dependencies]
ed25519-dalek.workspace = true
