[package]
name = "sandbox-guard-helper"
description = "Trusted proxy, limit, and self-test helper for Sandbox Guard"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "guard-helper"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
