[package]
name = "sandbox-guard-runner"
description = "Isolated execution backends for Sandbox Guard"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
sandbox-guard-helper = { path = "../sandbox-guard-helper" }
image.workspace = true
hex.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true
uuid.workspace = true
which.workspace = true

[dev-dependencies]
tempfile.workspace = true
